--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
           </classpathScope>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version> <!-- Use the latest version -->
+        <configuration>
+          <source>1.8</source> <!-- Update to your desired Java version (e.g., 1.8, 11, 17) -->
+          <target>1.8</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
